Fix overflow during menu pop animation

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   user-select: none;
   font-family: "Hanken Grotesk Variable", sans-serif;
+  overflow: hidden;
 }
 
 #root {
